# mscop-rmc

./: .gitignore  README.md
data/: planning-small.xml  planning2011-01-10-update-ucy.xml  planning2011-01-11-update-ucy.xml  planning2011-01-12-update-ucy.xml  planning2011-01-13-update-ucy.xml  planning2011-01-14-update-ucy.xml  planning2011-01-18-update-ucy.xml  planning2011-01-19-update-ucy.xml  planning2011-01-20-update-ucy.xml  planning2011-01-21-update-ucy.xml  planning2011-01-25-update-ucy.xml  planning2011-01-26-update-ucy.xml  planning2011-01-27-update-ucy.xml  planning2011-01-28-update-ucy.xml  planning2011-02-01-update-ucy.xml  planning2011-02-02-update-ucy.xml  planning2011-02-03-update-ucy.xml  planning2011-02-07-update-ucy.xml  planning2011-02-08-update-ucy.xml  planning2011-02-09-update-ucy.xml  planning2011-02-10-update-ucy.xml  planning2011-02-11-update-ucy.xml  planning2011-02-14-update-ucy.xml  planning2011-02-15-update-ucy.xml  planning2011-02-16-update-ucy.xml  planning2011-02-18-update-ucy.xml  planning2011-02-21-update-ucy.xml
doc/: Makefile  ex.tex
notes/: data.txt
src/: CMakeLists.txt  Problem.cpp  Problem.hpp  RMC.cpp  ReadXML.cpp  ReadXML.hpp  XMLDataTypes.hpp
